Fixed some z-index bugs with the header and popup components

--- a/src/Styles/Popup.css
+++ b/src/Styles/Popup.css
@@ -1,7 +1,7 @@
 .popup {
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 20;
   opacity: 0;
   width: 100%;
   height: 100%;
